# simple-query-processor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  queries.sql
.github/workflows/: ci.yml
data/: users.csv
docs/: features.md  methodology.md  web-architecture.md
include/app/: query_engine.hpp  sql_script_loader.hpp
include/app/cli/: cli_options.hpp  line_editor.hpp  query_engine_cli.hpp
include/common/: ansi.hpp  data_type.hpp  types.hpp
include/execution/: aggregation_executor.h  aggregation_executor.hpp  compiled_predicate.hpp  distinct_executor.hpp  executor.h  executor.hpp  executor_builder.h  executor_builder.hpp  expression.h  expression.hpp  filter_executor.h  filter_executor.hpp  index_scan_executor.hpp  join_executor.hpp  limit_executor.h  limit_executor.hpp  projection_executor.h  projection_executor.hpp  seq_scan_executor.h  seq_scan_executor.hpp  sort_executor.h  sort_executor.hpp
include/parser/: ast.h  ast.hpp  lexer.h  lexer.hpp  parser.h  parser.hpp  token.h  token.hpp
include/planner/: cost_model.hpp  optimizer.hpp  plan.hpp  plan_node.h  planner.h  statistics.hpp
include/storage/: csv_loader.h  csv_loader.hpp  metadata_catalog.hpp  table.h  table.hpp
src/app/: query_engine_app.cpp  sql_script_loader.cpp
src/app/cli/: cli_options.cpp  line_editor.cpp  query_engine_cli.cpp
src/common/: data_type.cpp
src/execution/: aggregation_executor.cpp  compiled_predicate.cpp  distinct_executor.cpp  executor_builder.cpp  expression.cpp  filter_executor.cpp  index_scan_executor.cpp  join_executor.cpp  limit_executor.cpp  projection_executor.cpp  seq_scan_executor.cpp  sort_executor.cpp
src/parser/: ast.cpp  lexer.cpp  parser.cpp
src/planner/: cost_model.cpp  optimizer.cpp  plan.cpp  plan_node.cpp  planner.cpp  statistics.cpp
src/storage/: csv_loader.cpp  metadata_catalog.cpp  table.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  aggregation_edge_cases_test.cpp  alter_table_test.cpp  cmake_install.cmake  data_type_test.cpp  execution_test.cpp  expression_test.cpp  lexer_test.cpp  parser_test.cpp  unit_tests[1]_include.cmake
web/: app.py
web/static/: app.js  styles.css
web/templates/: index.html
